[package]
name = "nikke-toolbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#iced = "0.8"
fs_extra = "1.3.0"
dialoguer = "0.10.3"
rfd = "0.11.1"
#whoami = "0.9.0"
dirs = "4.0.0"
winreg = "0.11"
lazy_static = "1.4.0"

[build-dependencies]
embed-resource = "1.8.0"

[profile.release]
panic = "abort"
lto = true
